HelloWorld.WebApp.Stateful/kube-config/stateful-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-07-30T11:49:03Z"
  name: test-windows-stateful-service
  namespace: default
spec:
  ports:
  - nodePort: 31831
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: test-windows-stateful
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
