HelloWorld.WebApp.Stateful/kube-config/stateful-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-windows-stateful-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /stateful
        backend:
          serviceName: test-windows-stateful-service
          servicePort: 80
